[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphs_kogablu"
version = "0.1.0"
description = "Dijkstra's shortest path"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name="Kobe Gamble"}]
license = {text = "RRCC"}

[project.urls]
Homepage = "https://github.com/<kogablu>/graphs_kgamble"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["graphs_kgamble*"]
